Fixed alignment issues... still need to get summary header displaying correctly

--- a/public/stylesheets/cgt.css
+++ b/public/stylesheets/cgt.css
@@ -255,7 +255,6 @@
 }
 
 .pdf .grid-layout__column--1-2 {
-    width: 50%;
     vertical-align: top;
     display: table-cell;
     box-sizing: border-box;
@@ -309,7 +308,7 @@
 }
 
 .pdf-non-resident .grid-layout__column--1-3 {
-    width: 50%;
+    width: 33.33%;
     vertical-align: top;
     box-sizing: border-box;
     display: table;
@@ -318,7 +317,7 @@
 }
 
 .pdf-non-resident .grid-layout__column--1-2 {
-    width: 50%;
+    width: 66.66%;
     vertical-align: top;
     box-sizing: border-box;
     display: table;
@@ -376,7 +375,7 @@ span.election-text > .block {
 }
 
 .summary-grid-layout__column--1-2 {
-    width: 60%;
+    width: 66.66%;
     vertical-align: top;
     display: table-cell;
     box-sizing: border-box;
